css/app.css
/* Styles added in addition to the default foundation styles */

.top-bar {
  height: 51px;
}

.top-bar .name h1, .top-bar img, .top-bar li {
  height: 51px; }
  .top-bar li a {
    height: 100%; }

.top-bar .name h1 a {
  display: inline;
  padding: 0 0.3125rem;
  vertical-align: top; }

.ritlogo, .ritabbr, .ritlong {
  background-repeat: no-repeat;
  background-size: contain;
  display: inline-block;
  margin-top: 0.625rem; }

.ritabbr {
  background-image: url('../img/rit_30.png');
  height: 1.875rem;
  padding-left: 6.3125rem; }

.ritlong {
  background-image: url('../img/rit_long.min.svg');
  height: 1.625rem;
  padding-left: 20rem;
  margin: 0 0 0.3rem;
  background-position: bottom;
  background-size: 16.59375rem 1.125rem; }

.ritsearch input {
  box-shadow: none;
  border-right: none;
  padding-top: 0.2rem;
  padding-bottom: 0.1rem;
  border-radius: 0.6rem 0px 0px 0.6rem;
  border-right: none;
  margin: 0;
  height: 1.6rem; }

.search-button {
  border-style: solid;
  border-width: 0px;
  cursor: pointer;
  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  font-weight: normal;
  line-height: normal;
  margin: 0 0 1.25rem;
  position: relative;
  text-decoration: none;
  text-align: center;
  -webkit-appearance: none;
  -webkit-border-radius: 0;
  display: inline-block;
  /*    @include button($bg:$body-bg);
    @include button-size($button-med, false); */
  background-color: white;
  border-color: #cccccc;
  color: #333333;
  /*    color: $body-font-color; */
  height: 1.6rem;
  border: 1px solid #cccccc;
  padding: 0.2rem 0.2rem 0.1rem !important;
  border-radius: 0px 0.6rem 0.6rem 0px;
  border-left: none;
  margin: 0; }
  .search-button:hover, .search-button:focus {
    background-color: #eeeeee; }
  .search-button:hover, .search-button:focus {
    color: #333333; }

li.ritsearch {
  padding: 0.3rem 17px; }

.ritsearch i {
  font-size: initial; }

.top-bar .menu-icon {
  text-indent: 2.1875rem;
  width: 51px;
  height: 51px;
  display: block;
  padding: 0;
  color: white;
  position: relative;
  transform: translate3d(0, 0, 0); }
  .top-bar .menu-icon span::after {
    content: "";
    position: absolute;
    display: block;
    height: 0;
    top: 50%;
    margin-top: -0.5rem;
    left: 0.90625rem;
    box-shadow: 0 0px 0 1px white, 0 7px 0 1px white, 0 14px 0 1px white;
    width: 1rem; }
  .top-bar .menu-icon span:hover:after {
    box-shadow: 0 0px 0 1px #b3b3b3, 0 7px 0 1px #b3b3b3, 0 14px 0 1px #b3b3b3; }

.off-canvas-list div.row {
  padding: 0.66667rem; }

#logo {
  position: fixed;
  bottom: 0;
  left: 10px;
  z-index: 750;
  background-color: white;
  padding-right: 1rem; }

#logo img {
  position: absolute;
  bottom: 0;
  height: 8rem; }

#logo h2 {
  padding-left: 7rem; }

#logo h3 {
  padding-left: 0.9375rem; }

#logo .wrap-inner {
  position: relative; }

.posts article > div {
  border-bottom: 3px groove #c7c7c7;
  padding: 10px;
  background-color: white; }

.posts .coverimg {
  background-size: cover;
  height: 10em;
  width: 100%; }

@media only screen and (min-width:40.063em) {
  .posts article {
    padding: 45px;
    min-height: 40rem;
    background-size: cover; }
  .posts article > div {
    border-bottom: none;
    max-width: 450px; }
  .posts article:nth-child(odd) > div {
    float: right; }
  .posts article:nth-child(even) > div {
    float: left; } }

/* Styles for housing selection */

#selection {
    overflow-x: scroll;
}

.color-empty {
  fill: #00FF00; }

.color-partial {
  fill: #0000FF; }

.color-full {
  fill: #CC0000; }

.circle:hover .color-empty {
  fill: #00DD00; }

.circle:hover .color-partial {
  fill: #0000CC; }

.circle:hover .color-full {
  fill: #AA0000; }

.circle > .shading {
  opacity: 0;
  transition: opacity 200ms ease-out; }
  .circle:hover > .shading {
    opacity: 0.2; }

div#instructions {
    background-color: #EEEEEE;
    overflow: hidden;
    max-height: 0px;
    width: 100%;
    margin-bottom: 5px;
    transition: max-height 800ms ease;
}

div#instructions-inner {
    margin: 25px;
}

.instructions-open {
    max-height: 1000px !important;    
}

.fixed-center {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
}

.loading {
    width: 100px;
    height: 100px;
    background-image: url('../img/logo-plain.png');
    background-size: contain;
    background-repeat: no-repeat;
}

p.loading-text {
    color: #232323;
    font-size: 28px;
    margin-top: 50px;
    text-indent: 30px;
}

.load-anim {
    font-size: 50px;
    width: 80px;
    height: 80px;
    margin-top: 30px;
    margin-left: 45px;
    position: fixed;
    animation: load-anim 6s infinite linear;
    -webkit-animation: load-anim 6s infinite linear;
}

@keyframes load-anim {
    0%   {color: rgba(235,235,0,0); transform: rotate( 140deg ); }
    1%   {color: rgba(235,235,0,1); transform: rotate( 140deg ); }
    25%  {color: rgba(235,235,0,1); }
    33%  {color: rgba(235,235,0,0); transform: rotate( 270deg ); }
    34%  {color: rgba(235,0  ,0,0); transform: rotate( 140deg ); }
    35%  {color: rgba(235,0  ,0,1); transform: rotate( 140deg ); }
    58%  {color: rgba(235,0  ,0,1); }
    66%  {color: rgba(235,0  ,0,0); transform: rotate( 270deg ); }
    67%  {color: rgba(0  ,235,0,0); transform: rotate( 140deg ); }
    68%  {color: rgba(0  ,235,0,1); transform: rotate( 140deg ); }
    91%  {color: rgba(0  ,235,0,1); }
    99%  {color: rgba(0  ,255,0,0); transform: rotate( 270deg ); }
    100% {color: rgba(0  ,0  ,0,0); transform: rotate( 270deg ); }
}

@-webkit-keyframes load-anim {
    0%   {color: rgba(235,235,0,0); -webkit-transform: rotate( 140deg ); }
    1%   {color: rgba(235,235,0,1); -webkit-transform: rotate( 140deg ); }
    25%  {color: rgba(235,235,0,1); }
    33%  {color: rgba(235,235,0,0); -webkit-transform: rotate( 270deg ); }
    34%  {color: rgba(235,0  ,0,0); -webkit-transform: rotate( 140deg ); }
    35%  {color: rgba(235,0  ,0,1); -webkit-transform: rotate( 140deg ); }
    58%  {color: rgba(235,0  ,0,1); }
    66%  {color: rgba(235,0  ,0,0); -webkit-transform: rotate( 270deg ); }
    67%  {color: rgba(0  ,235,0,0); -webkit-transform: rotate( 140deg ); }
    68%  {color: rgba(0  ,235,0,1); -webkit-transform: rotate( 140deg ); }
    91%  {color: rgba(0  ,235,0,1); }
    99%  {color: rgba(0  ,255,0,0); -webkit-transform: rotate( 270deg ); }
    100% {color: rgba(0  ,0  ,0,0); -webkit-transform: rotate( 270deg ); }
}

.loading-screen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba( 150, 150, 150, 0.5 );
    z-index: 99;
}

/* Tooltip styles, taken from http://bl.ocks.org/Caged/6476579 */
.d3-tip {
    line-height: 1;
    font-weight: bold;
    padding: 12px;
    background: rgba(0, 0, 0, 0.8);
    color: #fff;
    border-radius: 2px;
}

/* Creates a small triangle extender for the tooltip */
.d3-tip:after {
    box-sizing: border-box;
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: rgba(0, 0, 0, 0.8);
    content: "\25BC";
    position: absolute;
    text-align: center;
}

/* Style northward tooltips differently */
.d3-tip.n:after {
    margin: -1px 0 0 0;
    top: 100%;
    left: 0;
}

/* -------------------------------------------------
 * Administration Page
 * -------------------------------------------------
 */
.list-header {
    margin: 1rem; }
    .list-header h1 {
        display: inline-block;
        font-size: 1.5em; }
    .list-header button.button {
        padding: 0;
        width: 2rem;
        height: 2rem;
        float: right;
        margin-left: 0.8rem; }
    .list-section {
        border: 1px solid #eee;
        /*box-shadow: 1px 1px 2px gray;*/
        margin-bottom: 1.875rem; }

.list-area {
    margin: 0.25rem; }

.deletable {
    margin-left: 0.125rem;
    cursor: pointer; }
    .deletable::after {
        border-left: 1px solid #999;
        margin-left: 0.5rem;
        padding-left: 0.25rem;
        content: 'x'; }
    .deletable:hover {
        background-color: #ccc;

